# Off-Price-Analytics

./: .gitignore  README.md  _quarto.yml  main.py  model.md  pyproject.toml  requirements.txt
notebooks/: _publish.yml  experiment.ipynb  index.qmd  index.quarto_ipynb
output/notebooks/: 01-data_clean_and_prep..html  index..html  index.html
src/: logger.py
