[project]
name = "faro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn==0.11.0",
    "ipykernel>=6.29.5",
    "lets-plot>=4.6.2",
    "numpy==1.26.4",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "plotnine>=0.14.5",
    "quarto>=0.1.0",
    "scikit-learn==1.4.2",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
]
